// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordUpdateModal should render the PasswordUpdateModal 1`] = `
<div>
  <div
    class="xl:w-3/4 md:w-11/12 bg-white mx-auto my-4 p-3 shadow-sm border border-gray-150 rounded-md"
    data-testid="password-update-modal"
  >
    <div
      class="font-sans subpixel-antialiased text-base text-center text-gray-400 mt-2 mb-10"
      data-testid="password-update-header"
    >
      Updating password for 
      test1
    </div>
    <form
      class=""
    >
      <div
        class="flex xl:w-1/2 md:w-2/4 mx-auto my-8 items-center align-middle justify-between"
        data-testid="new-password-container"
      >
        <label
          class="font-sans subpixel-antialiased text-gray-700 font-bold"
        >
          New Password
        </label>
        <div
          class="block h-12 min-h-12 max-h-12"
        >
          <input
            class="block px-3 py-1.5 text-base font-normal text-gray-700 bg-zinc-50 bg-clip-padding border border-solid rounded mx-4 focus:outline-blue-200 border-gray-300"
            data-testid="new-password-input"
            name="password"
            placeholder="Enter password"
            type="password"
          />
        </div>
      </div>
      <div
        class="flex xl:w-1/2 md:w-2/4 mx-auto my-8 items-center align-middle justify-between"
        data-testid="confirm-password-container"
      >
        <label
          class="font-sans subpixel-antialiased text-gray-700 font-bold"
        >
          Confirm password
        </label>
        <div
          class="block h-12 min-h-12 max-h-12"
        >
          <input
            class="block px-3 py-1.5 text-base font-normal text-gray-700 bg-zinc-50 bg-clip-padding border border-solid rounded mx-4 focus:outline-blue-200 border-gray-300"
            data-testid="confirm-password-input"
            name="confirmPassword"
            placeholder="Confirm password"
            type="password"
          />
        </div>
      </div>
      <div
        class="flex mx-auto justify-evenly my-10 w-1/2 gap-6 flex-row-reverse"
      >
        <button
          class="px-9 py-2 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-lime-700 dark:text-white w-1/2 bg-green-300 dark:bg-green-400"
          data-testid="password-update-confirm-button"
        >
          Update
        </button>
        <button
          class="px-9 py-2 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-red-800 dark:text-white w-1/2 bg-red-300 dark:bg-red-500"
          data-testid="password-update-cancel-button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`PasswordUpdateModal should show error notification when password update api call fails 1`] = `
<div>
  <div
    class="xl:w-3/4 md:w-11/12 bg-white mx-auto my-4 p-3 shadow-sm border border-gray-150 rounded-md"
    data-testid="password-update-modal"
  >
    <div
      class="font-sans subpixel-antialiased text-base text-center text-gray-400 mt-2 mb-10"
      data-testid="password-update-header"
    >
      Updating password for 
      test1
    </div>
    <form
      class=""
    >
      <div
        class="flex xl:w-1/2 md:w-2/4 mx-auto my-8 items-center align-middle justify-between"
        data-testid="new-password-container"
      >
        <label
          class="font-sans subpixel-antialiased text-gray-700 font-bold"
        >
          New Password
        </label>
        <div
          class="block h-12 min-h-12 max-h-12"
        >
          <input
            class="block px-3 py-1.5 text-base font-normal text-gray-700 bg-zinc-50 bg-clip-padding border border-solid rounded mx-4 focus:outline-blue-200 border-gray-300"
            data-testid="new-password-input"
            name="password"
            placeholder="Enter password"
            type="password"
          />
        </div>
      </div>
      <div
        class="flex xl:w-1/2 md:w-2/4 mx-auto my-8 items-center align-middle justify-between"
        data-testid="confirm-password-container"
      >
        <label
          class="font-sans subpixel-antialiased text-gray-700 font-bold"
        >
          Confirm password
        </label>
        <div
          class="block h-12 min-h-12 max-h-12"
        >
          <input
            class="block px-3 py-1.5 text-base font-normal text-gray-700 bg-zinc-50 bg-clip-padding border border-solid rounded mx-4 focus:outline-blue-200 border-gray-300"
            data-testid="confirm-password-input"
            name="confirmPassword"
            placeholder="Confirm password"
            type="password"
          />
        </div>
      </div>
      <div
        class="flex mx-auto justify-evenly my-10 w-1/2 gap-6 flex-row-reverse"
      >
        <button
          class="px-9 py-2 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-lime-700 dark:text-white w-1/2 bg-green-300 dark:bg-green-400"
          data-testid="password-update-confirm-button"
        >
          Update
        </button>
        <button
          class="px-9 py-2 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-red-800 dark:text-white w-1/2 bg-red-300 dark:bg-red-500"
          data-testid="password-update-cancel-button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`PasswordUpdateModal should show error passwords are empty 1`] = `
<div>
  <div
    class="xl:w-3/4 md:w-11/12 bg-white mx-auto my-4 p-3 shadow-sm border border-gray-150 rounded-md"
    data-testid="password-update-modal"
  >
    <div
      class="font-sans subpixel-antialiased text-base text-center text-gray-400 mt-2 mb-10"
      data-testid="password-update-header"
    >
      Updating password for 
      test1
    </div>
    <form
      class=""
    >
      <div
        class="flex xl:w-1/2 md:w-2/4 mx-auto my-8 items-center align-middle justify-between"
        data-testid="new-password-container"
      >
        <label
          class="font-sans subpixel-antialiased text-gray-700 font-bold"
        >
          New Password
        </label>
        <div
          class="block h-12 min-h-12 max-h-12"
        >
          <input
            class="block px-3 py-1.5 text-base font-normal text-gray-700 bg-zinc-50 bg-clip-padding border border-solid rounded mx-4 focus:outline-blue-200 border-2 border-rose-300"
            data-testid="new-password-input"
            name="password"
            placeholder="Enter password"
            type="password"
          />
          <div
            class="text-red-500 text-xs font-sans subpixel-antialiased mx-4 w-40 absolute"
            data-testid="input-error-password"
          >
            Password is required
          </div>
        </div>
      </div>
      <div
        class="flex xl:w-1/2 md:w-2/4 mx-auto my-8 items-center align-middle justify-between"
        data-testid="confirm-password-container"
      >
        <label
          class="font-sans subpixel-antialiased text-gray-700 font-bold"
        >
          Confirm password
        </label>
        <div
          class="block h-12 min-h-12 max-h-12"
        >
          <input
            class="block px-3 py-1.5 text-base font-normal text-gray-700 bg-zinc-50 bg-clip-padding border border-solid rounded mx-4 focus:outline-blue-200 border-2 border-rose-300"
            data-testid="confirm-password-input"
            name="confirmPassword"
            placeholder="Confirm password"
            type="password"
          />
          <div
            class="text-red-500 text-xs font-sans subpixel-antialiased mx-4 w-40 absolute"
            data-testid="input-error-confirmPassword"
          >
            The passwords do not match
          </div>
        </div>
      </div>
      <div
        class="flex mx-auto justify-evenly my-10 w-1/2 gap-6 flex-row-reverse"
      >
        <button
          class="px-9 py-2 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-lime-700 dark:text-white w-1/2 bg-green-300 dark:bg-green-400"
          data-testid="password-update-confirm-button"
        >
          Update
        </button>
        <button
          class="px-9 py-2 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-red-800 dark:text-white w-1/2 bg-red-300 dark:bg-red-500"
          data-testid="password-update-cancel-button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`PasswordUpdateModal should show loader when updating password 1`] = `
<div>
  <div
    class="xl:w-3/4 md:w-11/12 bg-white mx-auto my-4 p-3 shadow-sm border border-gray-150 rounded-md"
    data-testid="password-update-modal"
  >
    <div
      class="font-sans subpixel-antialiased text-base text-center text-gray-400 mt-2 mb-10"
      data-testid="password-update-header"
    >
      Updating password for 
      test1
    </div>
    <div
      class="font-sans subpixel-antialiased text-base text-center text-gray-400 mt-2 mb-10"
      data-testid="password-update-loading-header"
    >
      Please wait...
    </div>
    <span
      class="css-1uyxhex-LoaderStyle"
    >
      <span
        class="css-m7eth1"
      />
      <span
        class="css-16zptrm"
      />
      <span
        class="css-1ma23m2"
      />
      <span
        class="css-ilqonc"
      />
      <span
        class="css-gmg1hm"
      />
      <span
        class="css-1sh5wjb"
      />
    </span>
  </div>
</div>
`;

exports[`PasswordUpdateModal should update password and close modal on clicking update button 1`] = `
<div>
  <div
    class="xl:w-3/4 md:w-11/12 bg-white mx-auto my-4 p-3 shadow-sm border border-gray-150 rounded-md"
    data-testid="password-update-modal"
  >
    <div
      class="font-sans subpixel-antialiased text-base text-center text-gray-400 mt-2 mb-10"
      data-testid="password-update-header"
    >
      Updating password for 
      test1
    </div>
    <form
      class=""
    >
      <div
        class="flex xl:w-1/2 md:w-2/4 mx-auto my-8 items-center align-middle justify-between"
        data-testid="new-password-container"
      >
        <label
          class="font-sans subpixel-antialiased text-gray-700 font-bold"
        >
          New Password
        </label>
        <div
          class="block h-12 min-h-12 max-h-12"
        >
          <input
            class="block px-3 py-1.5 text-base font-normal text-gray-700 bg-zinc-50 bg-clip-padding border border-solid rounded mx-4 focus:outline-blue-200 border-gray-300"
            data-testid="new-password-input"
            name="password"
            placeholder="Enter password"
            type="password"
          />
        </div>
      </div>
      <div
        class="flex xl:w-1/2 md:w-2/4 mx-auto my-8 items-center align-middle justify-between"
        data-testid="confirm-password-container"
      >
        <label
          class="font-sans subpixel-antialiased text-gray-700 font-bold"
        >
          Confirm password
        </label>
        <div
          class="block h-12 min-h-12 max-h-12"
        >
          <input
            class="block px-3 py-1.5 text-base font-normal text-gray-700 bg-zinc-50 bg-clip-padding border border-solid rounded mx-4 focus:outline-blue-200 border-gray-300"
            data-testid="confirm-password-input"
            name="confirmPassword"
            placeholder="Confirm password"
            type="password"
          />
        </div>
      </div>
      <div
        class="flex mx-auto justify-evenly my-10 w-1/2 gap-6 flex-row-reverse"
      >
        <button
          class="px-9 py-2 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-lime-700 dark:text-white w-1/2 bg-green-300 dark:bg-green-400"
          data-testid="password-update-confirm-button"
        >
          Update
        </button>
        <button
          class="px-9 py-2 shadow-md rounded-md text-center text-base font-semibold cursor-pointer hover:brightness-105 outline-none text-red-800 dark:text-white w-1/2 bg-red-300 dark:bg-red-500"
          data-testid="password-update-cancel-button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;
